--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,12 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Work Sans;
 }
 
 .btn {
     padding: 21px 32px 21px 32px;
     color: rgb(255, 255, 255);
-    font-family: Work Sans;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
@@ -30,17 +30,16 @@
     background: rgb(82, 195, 3);
     cursor: pointer;
 }
+
 .btn:hover {
     background: rgb(82, 195, 3, 0.8);
 }
 
 /*----------HERO SECTION----------*/
 #hero {
-    height: 919px;
     background: linear-gradient(0deg, rgb(16, 16, 16) -19.5%, rgba(16, 16, 16, 0) 100%), url(../assets/hero-bg.png);
     background-size: cover;
     background-position: center;
-    padding: 0 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,13 +47,11 @@
 }
 
 #hero .hero-content {
-    width: 1023;
-    /* margin: 0 auto; */
+    padding: 200px 120px;
 }
 
 #hero .hero-content .subtitle {
     color: rgb(255, 255, 255);
-    font-family: Work Sans;
     font-size: 32px;
     font-weight: 600;
     line-height: 38px;
@@ -66,7 +63,6 @@
 
 #hero .hero-content .title {
     color: rgb(255, 255, 255);
-    font-family: Work Sans;
     font-size: 64px;
     font-weight: 700;
     line-height: 80px;
@@ -77,7 +73,6 @@
 
 #hero .hero-content .description {
     color: rgb(255, 255, 255);
-    font-family: Work Sans;
     font-size: 18px;
     font-weight: 500;
     line-height: 28px;
